# wot-sensor-esp32

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
App/: CMakeLists.txt
App/include/: AppMain.h
App/src/: AppMain.cpp
Devices/: CMakeLists.txt
Devices/wot-device-common/: CMakeLists.txt  README.md
Devices/wot-device-common/include/: DeviceImp.h  NwAdapter.h  NwDeviceEnum.h  NwDeviceInfo.h
Devices/wot-device-common/src/: DeviceImp.cpp  NwAdapter.cpp
Utility/: CMakeLists.txt
Utility/cpp-logger/: CMakeLists.txt
Utility/cpp-logger/include/: Logger.h
Utility/cpp-logger/src/: Logger.cpp
wot-binding-esp32/: BindClient.cpp  BindClient.h  BindServer.cpp  BindServer.h  BindServerDef.h  CMakeLists.txt  README.md
wot-binding-esp32/CoAP/: BindCoAPServer.cpp  BindCoAPServer.h
wot-binding-esp32/Websocket/: BindWebSocket.cpp  BindWebSocket.h
wot-binding-esp32/http/: BindHttpServer.cpp  BindHttpServer.h
